dark mode fix

--- a/index.css
+++ b/index.css
@@ -452,14 +452,6 @@ h3 {
     #intro {
         background: linear-gradient(to bottom right, #547bc9, #9140aa);
     }
-
-    #projectsGroup img:hover{ 
-        animation: hoverUpDARK 1s forwards;
-    }
-    
-    #projectsGroup img:not(:hover){ 
-        animation: hoverDownDARK 1s forwards;
-    }
 }
 
 @keyframes hoverUpDARK {
